--- a/src/html/header.html
+++ b/src/html/header.html
@@ -30,8 +30,11 @@
         </ul>
       </nav>
       <div class="header__locale locale">
-        <div class="locale__item">Ru</div>
+        <div class="locale__item _is-current">Ru</div>
         <div class="locale__item">En</div>
+      </div>
+      <div class="header__burger">
+        <img src="./img/header/burger.svg" alt="hamburger">
       </div>
     </div>
   </div>
