--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <div class="wrapper">
     @@include('./html/header.html', {})
     <main class="page">
-      
+      @@include('./html/home/introduction.html', {})      
     </main>
     @@include('./html/footer.html', {})
   </div>
