section about fond added

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     @@include('./html/header.html', {})
     <main class="page">
       @@include('./html/home/introduction.html', {})      
+      @@include('./html/home/about_fond.html', {})      
     </main>
     @@include('./html/footer.html', {})
   </div>
