section target adeed

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     @@include('./html/header.html', {})
     <main class="page">
       @@include('./html/home/introduction.html', {})      
-      @@include('./html/home/about_fond.html', {})      
+      @@include('./html/home/about_fond.html', {})
+      @@include('./html/home/target.html', {}) 
     </main>
     @@include('./html/footer.html', {})
   </div>
