--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,64 @@
 <footer class="footer">
-  <div class="_container">
-    footer
+  <div class="footer__container _container">
+    <div class="footer__header">
+      <div class="footer__title">
+        <h2 class="footer__title-text title-large">Основатели фонда</h2>
+        @@include('./components/button.html', {
+          "text": "Связаться с нами",
+          "class": "footer__title-btn"
+        })
+      </div>
+      <div class="footer__info">
+        <h3 class="footer__info-title">Лицензии выданные Государственной службой регулирования и надзора за финансовым рынком при Правительстве Кыргызской Республики:</h3>
+        <ul class="footer__info-list">
+          <li class="footer__info-item item-info">
+            <div class="item-info__text text">На осуществление брокерской деятельости</div>
+            <div class="item-info__date">16.11.2018 года №180</div>
+          </li>
+          <li class="footer__info-item item-info">
+            <div class="item-info__text text">На осуществление дилерской деятельости</div>
+            <div class="item-info__date">16.11.2018 года №181</div>
+          </li>
+          <li class="footer__info-item item-info">
+            <div class="item-info__text text">На осуществление деятельности по доверительному управлению инвестиционными активами</div>
+            <div class="item-info__date">16.11.2018 года №182</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <div class="footer__data">
+        <div class="footer__column">
+          <div class="footer__data-item item-data">
+            <div class="item-data__title">Будьте осторожны</div>
+            <div class="item-data__text">Общайтесь только через официальные каналы связи.</div>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="footer__data-item item-data">
+            <div class="item-data__title">Наименование:</div>
+            <div class="item-data__text">ОсОО «Роял Пюр Голд»</div>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="footer__data-item item-data">
+            <div class="item-data__title">Адрес</div>
+            <div class="item-data__text">Кыргызская Республика, г. Бишкек, ул. Фрунзе 300/3</div>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="footer__data-item item-data">
+            <div class="item-data__title">Телефон</div>
+            <a href="tel:+996755156868" class="item-data__text">+996 (755) 156 868</ф>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="footer__data-item item-data">
+            <div class="item-data__title">E-mail</div>
+            <a href="mailto:envoysvision@office.com" class="item-data__text">envoysvision@office.com</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
