added advantages block

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     @@include('./html/header.html', {})
     <main class="page">
       @@include('./html/home/hero.html', {})
+      @@include('./html/home/advantages.html', {})
     </main>
     @@include('./html/footer.html', {})
   </div>
