added investment block

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <main class="page">
       @@include('./html/home/hero.html', {})
       @@include('./html/home/advantages.html', {})
+      @@include('./html/home/investment.html', {})
     </main>
     @@include('./html/footer.html', {})
   </div>
