--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -13,15 +13,15 @@
         <ul class="footer__info-list">
           <li class="footer__info-item item-info">
             <div class="item-info__text text">На осуществление брокерской деятельости</div>
-            <div class="item-info__date">16.11.2018 года №180</div>
+            <div class="item-info__date">16.11.2018 <span class="item-info__date year">года</span> №180</div>
           </li>
           <li class="footer__info-item item-info">
             <div class="item-info__text text">На осуществление дилерской деятельости</div>
-            <div class="item-info__date">16.11.2018 года №181</div>
+            <div class="item-info__date">16.11.2018 <span class="item-info__date year">года</span> №181</div>
           </li>
           <li class="footer__info-item item-info">
             <div class="item-info__text text">На осуществление деятельности по доверительному управлению инвестиционными активами</div>
-            <div class="item-info__date">16.11.2018 года №182</div>
+            <div class="item-info__date">16.11.2018 <span class="item-info__date year">года</span> №182</div>
           </li>
         </ul>
       </div>
