--- a/src/html/home/about_fond.html
+++ b/src/html/home/about_fond.html
@@ -2,13 +2,13 @@
   <div class="introduction__container _container">
     <div class="introduction__body">
       <div class="introduction__title">
-        <h2 class="title-large introduction__title-text">О фонде</h2>
+        <h2 class="title-large introduction__title-text about_fond-title">О фонде</h2>
       </div>
       <div class="introduction__desc">
-        <div class="introduction__text text">Фонд первичных размещений был создан в начале 2021 года командой специалистов инвестиционной компании «Royal Pure
+        <div class="introduction__text text about_fond-text"><span class='text green'>Фонд первичных размещений</span> был создан в начале 2021 года командой специалистов инвестиционной компании «Royal Pure
         Gold». Задача данного фонда заключается в том, чтобы сделать инвестирование в IPO и другие инструменты максимально
         простым, доступным для всех граждан, прибыльным, а также безопасным.</div>
-        <div class="introduction__text text">Этот фонд будет состоят из акций более чем 50 компаний из разных областей — от фармацевтики до электронной коммерции
+        <div class="introduction__text text about_fond-text"><span class='text green'>Этот фонд будет состоят из акций более чем 50 </span>компаний из разных областей — от фармацевтики до электронной коммерции
         и ПО — которые вышли на IPO. У специалистов «Royal Pure Gold» большой опыт экспертизы и участия в первичных размещениях
         на глобальном рынке. Компания занимается инвестированием в IPO с 2018 года, и с тех пор поучаствовала в более 100
         различных первичных размещениях, средняя доходность по которым составила — более 50% годовых.</div>
