--- a/src/html/home/advantages.html
+++ b/src/html/home/advantages.html
@@ -3,7 +3,7 @@
 
         <div class="advantages__info">
             <h1 class="title-large advantages__title">
-                Основные <span class="hero__title-green">преимущества</span> фонда
+                Основные <span class="title-large green">преимущества</span> фонда
             </h1>
 
             <div class="controll-btns">
