--- a/src/html/home/hero.html
+++ b/src/html/home/hero.html
@@ -1,9 +1,9 @@
 <section class="hero">
     <div class="_container">
         <div class="hero__info">
-            <h1 class="title-large">
+            <h1 class="title-large hero__title">
                 ФОНД ПЕРВИЧНЫХ 
-                <span class="hero__title-green title-large">РАЗМЕЩЕНИЙ</span>
+                <span class="green title-large">РАЗМЕЩЕНИЙ</span>
             </h1>
             <p class="hero__text">
                 Фонд первичных размещений был создан в начале 2021 года командой специалистов инвестиционной компании «Royal Pure Gold».
