--- a/src/html/home/introduction.html
+++ b/src/html/home/introduction.html
@@ -5,9 +5,9 @@
         <h2 class="title-large introduction__title-text">Введение</h2>
       </div>
       <div class="introduction__desc">
-        <div class="introduction__text text">2020 год принес много сюрпризов: глобальная пандемия, экономический спад, потеря миллионов рабочих мест и пошатнувшиеся
+        <div class="introduction__text text"><span class="text green">2020 год принес много сюрпризов: </span>глобальная пандемия, экономический спад, потеря миллионов рабочих мест и пошатнувшиеся
         лидерские позиции Соединенных Штатов на мировой арене.</div>
-        <div class="introduction__text text">Для многих 2020 год был непростым, но для фондового рынка он оказался рекордным годом, особенно для рынка IPO, как по
+        <div class="introduction__text text"><span class="text green">Для многих 2020 год был непростым,</span> но для фондового рынка он оказался рекордным годом, особенно для рынка IPO, как по
         количеству компаний вышедших на биржу, так и по объему привлеченных инвестиций.</div>
         @@include('../components/button.html', {
           "text": "Подробнее",
