--- a/src/html/home/investment.html
+++ b/src/html/home/investment.html
@@ -3,14 +3,14 @@
         <div class="investment__wrap">
             <div class="investment__info">
                 <h2 class="investment__title title-large">
-                    <span class="hero__title-green title-large">Условия</span> инвестирования
+                    <span class="green title-large">Условия</span> инвестирования
                 </h2>
                 
                 <p class="investment__text text">
-                    Ожидаемая доходность портфеля 20-50% годовых
-                    Возможный риск просадки до 20% от стоимости активов фонда
-                    Раскрытие отчетов о деятельности Фонда - ежеквартально
-                    Маркетмейкер - “Royal Pure Gold”
+                    Ожидаемая доходность портфеля <span class='green'>20-50%</span> годовых
+                    Возможный риск просадки до <span class='green'>20%</span> от стоимости активов фонда
+                    Раскрытие отчетов о деятельности Фонда - <span class='green'>ежеквартально</span>
+                    Маркетмейкер - <span class='green'>“Royal Pure Gold”</span>
                 </p>
 
                 @@include('../components/button.html', {"text": 'Узнать больше', "class": 'investment__btn'})
