--- a/src/html/home/target.html
+++ b/src/html/home/target.html
@@ -1,7 +1,7 @@
 <section class="page__target target">
   <div class="target__container _container">
     <div class="target__header">
-      <h2 class="target__title title-small">Целью инвестиционной политики Фонда является обеспечение высоких и стабильных темпов роста своих активов</h2>
+      <h2 class="target__title title-small">Целью <span class='title-small green'>инвестиционной политики Фонда</span> является обеспечение высоких и <span class='title-small green'>стабильных темпов роста</span> своих активов</h2>
       @@include('../components/button.html', {
         "text": "Связаться с нами",
         "class": "target__btn"
