exit menu added

--- a/src/html/home/about_fond.html
+++ b/src/html/home/about_fond.html
@@ -14,7 +14,8 @@
         различных первичных размещениях, средняя доходность по которым составила — более 50% годовых.</div>
         @@include('../components/button.html', {
         "text": "Подробнее",
-        "class": "introduction__btn"
+        "class": "introduction__btn exit-menu-btn",
+        "dataset": "aboutFond"
         })
       </div>
     </div>
