--- a/src/html/home/introduction.html
+++ b/src/html/home/introduction.html
@@ -11,7 +11,8 @@
         количеству компаний вышедших на биржу, так и по объему привлеченных инвестиций.</div>
         @@include('../components/button.html', {
           "text": "Подробнее",
-          "class": "introduction__btn"
+          "class": "introduction__btn exit-menu-btn",
+          "dataset": "introduction"
         })
       </div>
     </div>
