--- a/src/html/home/target.html
+++ b/src/html/home/target.html
@@ -4,7 +4,8 @@
       <h2 class="target__title title-small">Целью инвестиционной политики Фонда является обеспечение высоких и стабильных темпов роста своих активов</h2>
       @@include('../components/button.html', {
         "text": "Связаться с нами",
-        "class": "target__btn"
+        "class": "target__btn",
+        "dataset": ""
       })
     </div>
     <div class="target__body">
@@ -16,7 +17,8 @@
           различным секторам экономики.</div>
           @@include('../components/button.html', {
             "text": "Подробнее",
-            "class": "card-target__btn"
+            "class": "card-target__btn exit-menu-btn",
+            "dataset": "investStrategy"
           })
         </article>
         <article class="target__card card-target">
