--- a/src/html/home/investment.html
+++ b/src/html/home/investment.html
@@ -13,7 +13,7 @@
                     Маркетмейкер - “Royal Pure Gold”
                 </p>
 
-                @@include('../components/button.html', {"text": 'Узнать больше', "class": 'investment__btn'})
+                @@include('../components/button.html', {"text": 'Узнать больше', "class": 'investment__btn exit-menu-btn', "dataset": "investCondition"})
             </div>
 
             <div class="investment__image-wrap _ibg">
