active links added

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -7,25 +7,25 @@
       <nav class="header__menu menu">
         <ul class="menu__list">
           <li class="menu__item _is-current">
-            <a href="#" class="menu__item-link">Главная</a>
+            <a href="#hero" class="menu__item-link">Главная</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__item-link">Введение</a>
+            <a href="#introduction" class="menu__item-link">Введение</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__item-link">О фонде</a>
+            <a href="#aboutFond" class="menu__item-link">О фонде</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__item-link">Преимущества</a>
+            <a href="#advantages" class="menu__item-link">Преимущества</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__item-link">Стратегия</a>
+            <a href="#target" class="menu__item-link">Стратегия</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__item-link">Условия</a>
+            <a href="#investment" class="menu__item-link">Условия</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__item-link">Основатели</a>
+            <a href="#footer" class="menu__item-link">Основатели</a>
           </li>
         </ul>
       </nav>
