--- a/src/html/home/about_fond.html
+++ b/src/html/home/about_fond.html
@@ -1,4 +1,4 @@
-<section class="page__introduction introduction">
+<section class="page__introduction introduction" id="aboutFond">
   <div class="introduction__container _container">
     <div class="introduction__body">
       <div class="introduction__title">
