--- a/src/html/home/hero.html
+++ b/src/html/home/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero">
     <div class="_container">
         <div class="hero__info">
             <h1 class="title-large">
