--- a/src/html/home/investment.html
+++ b/src/html/home/investment.html
@@ -1,4 +1,4 @@
-<section class="investment">
+<section class="investment" id="investment">
     <div class="_container">
         <div class="investment__wrap">
             <div class="investment__info">
