--- a/src/html/home/target.html
+++ b/src/html/home/target.html
@@ -1,4 +1,4 @@
-<section class="page__target target">
+<section class="page__target target" id="target">
   <div class="target__container _container">
     <div class="target__header">
       <h2 class="target__title title-small">Целью инвестиционной политики Фонда является обеспечение высоких и стабильных темпов роста своих активов</h2>
