--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<section class="footer" id="footer">
   <div class="footer__container _container">
     <div class="footer__header">
       <div class="footer__title">
