--- a/src/html/home/advantages.html
+++ b/src/html/home/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages" id="advantages">
     <div class="_container">
 
         <div class="advantages__info">
