solve problems with exit-menu

--- a/src/html/home/introduction.html
+++ b/src/html/home/introduction.html
@@ -1,4 +1,4 @@
-<section class="page__introduction introduction" id="introduction">
+<section class="page__introduction introduction hover-section" id="introduction">
   <div class="introduction__container _container">
     <div class="introduction__body">
       <div class="introduction__title">
