--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -55,7 +55,7 @@
         <div class="footer__column">
           <div class="footer__data-item item-data">
             <div class="item-data__title">E-mail</div>
-            <a href="mailto:envoysvision@office.com" class="item-data__text">envoysvision@office.com</a>
+            <a href="https://mail.google.com/mail/u/0/#sent?compose=GTvVlcRwQnfQKbCTJTLkcVqKhFkPkrwnHnFTVDsTMctwfMBThDGbrrbrNbWFhXFpLzMmfRKhmZSfr" class="item-data__text" target="_blank">envoysvision@office.com</a>
           </div>
         </div>
       </div>
