--- a/src/html/home/target.html
+++ b/src/html/home/target.html
@@ -2,11 +2,13 @@
   <div class="target__container _container">
     <div class="target__header">
       <h2 class="target__title title-small">Целью <span class='title-small green'>инвестиционной политики Фонда</span> является обеспечение высоких и <span class='title-small green'>стабильных темпов роста</span> своих активов</h2>
-      @@include('../components/button.html', {
-        "text": "Связаться с нами",
-        "class": "target__btn",
-        "dataset": ""
-      })
+      <a href="https://mail.google.com/mail/u/0/#sent?compose=GTvVlcRwQnfQKbCTJTLkcVqKhFkPkrwnHnFTVDsTMctwfMBThDGbrrbrNbWFhXFpLzMmfRKhmZSfr" target="_blank">
+        @@include('../components/button.html', {
+          "text": "Связаться с нами",
+          "class": "target__btn",
+          "dataset": ""
+        })
+      </a>
     </div>
     <div class="target__body">
       <div class="target__cards">
