added correct link

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -3,7 +3,7 @@
     <div class="footer__header">
       <div class="footer__title">
         <h2 class="footer__title-text title-large">Основатели фонда</h2>
-        <a href="https://mail.google.com/mail/u/0/#sent?compose=GTvVlcRwQnfQKbCTJTLkcVqKhFkPkrwnHnFTVDsTMctwfMBThDGbrrbrNbWFhXFpLzMmfRKhmZSfr" target="_blank">
+        <a href="https://mail.google.com/mail/u/0/?fs=1&to=envoysvision@gmail.com&tf=cm" target="_blank">
           @@include('./components/button.html', {
             "text": "Связаться с нами",
             "class": "footer__title-btn"
@@ -57,7 +57,7 @@
         <div class="footer__column">
           <div class="footer__data-item item-data">
             <div class="item-data__title">E-mail</div>
-            <a href="https://mail.google.com/mail/u/0/#sent?compose=GTvVlcRwQnfQKbCTJTLkcVqKhFkPkrwnHnFTVDsTMctwfMBThDGbrrbrNbWFhXFpLzMmfRKhmZSfr" class="item-data__text" target="_blank">envoysvision@office.com</a>
+            <a href="https://mail.google.com/mail/u/0/?fs=1&to=envoysvision@gmail.com&tf=cm" class="item-data__text" target="_blank">envoysvision@office.com</a>
           </div>
         </div>
       </div>
