--- a/src/html/home/hero.html
+++ b/src/html/home/hero.html
@@ -8,7 +8,7 @@
             <p class="hero__text">
                 Фонд первичных размещений был создан в начале 2021 года командой специалистов инвестиционной компании «Royal Pure Gold».
             </p>
-            <a href="https://mail.google.com/mail/u/0/#sent?compose=GTvVlcRwQnfQKbCTJTLkcVqKhFkPkrwnHnFTVDsTMctwfMBThDGbrrbrNbWFhXFpLzMmfRKhmZSfr" target="_blank">@@include('../components/button.html', {"text": 'Связаться с нами', "class": 'hero__btn'})</a>
+            <a href="https://mail.google.com/mail/u/0/?fs=1&to=envoysvision@gmail.com&tf=cm" target="_blank">@@include('../components/button.html', {"text": 'Связаться с нами', "class": 'hero__btn'})</a>
         </div>
 
         <img class="hero__img" src="img/hero/hero.jpg" alt="">
