--- a/src/html/home/investment.html
+++ b/src/html/home/investment.html
@@ -3,7 +3,7 @@
         <div class="investment__wrap">
             <div class="investment__info">
                 <h2 class="investment__title title-large">
-                    <span class="green title-large">Условия</span> инвестирования
+                    <span class="green">Условия</span> инвестирования
                 </h2>
                 
                 <p class="investment__text text">
