--- a/src/html/home/advantages.html
+++ b/src/html/home/advantages.html
@@ -24,7 +24,7 @@
                     Минимальный порог для входа
                 </h4>
 
-                <p class="advantages__list__item__text text">
+                <p class="advantages__list__item__text">
                     Цена размещения одной акции – 100$
                 </p>
             </li>
@@ -36,7 +36,7 @@
                     Получение аллокации в каждом IPO
                 </h4>
 
-                <p class="advantages__list__item__text text">
+                <p class="advantages__list__item__text">
                     По верхней границе относительно поданной заявки
                 </p>
             </li>
@@ -48,7 +48,7 @@
                     Инвестируйте на автопилоте
                 </h4>
 
-                <p class="advantages__list__item__text text">
+                <p class="advantages__list__item__text">
                     Отсутствие необходимости подавать отдельную заявку на участие в каждом новом IPO. Это делают за Вас специалисты нашего Фонда
                 </p>
             </li>
@@ -60,7 +60,7 @@
                     Безопасность вложений
                 </h4>
 
-                <p class="advantages__list__item__text text">
+                <p class="advantages__list__item__text">
                     Цена размещения одной акции – 100$
                 </p>
             </li>
@@ -72,7 +72,7 @@
                     Экономия времени
                 </h4>
 
-                <p class="advantages__list__item__text text">
+                <p class="advantages__list__item__text">
                     Фонд вкладывает деньги только в качественные IPO, прошедшие тщательный анализ и отбор. Вам не нужно тратить свое время и вникать в сложные рыночные механизмы
                 </p>
             </li>
@@ -84,7 +84,7 @@
                     Доступность фонда на бирже
                 </h4>
 
-                <p class="advantages__list__item__text text">
+                <p class="advantages__list__item__text">
                     Акции фонда торгуются на бирже и любой желающий инвестор может самостоятельно их приобрести.
                 </p>
             </li>
@@ -96,7 +96,7 @@
                     Возможность досрочно вывести свои средства
                 </h4>
 
-                <p class="advantages__list__item__text text">
+                <p class="advantages__list__item__text">
                     Без большой потери дохода путем продажи акций на вторичном рынке
                 </p>
             </li>
@@ -108,7 +108,7 @@
                     Создание пассивного дохода.
                 </h4>
 
-                <p class="advantages__list__item__text text">
+                <p class="advantages__list__item__text">
                     Фонд периодически выплачивает своим инвесторам дивиденды
                 </p>
             </li>
@@ -120,7 +120,7 @@
                     Максимальная прозрачность
                 </h4>
 
-                <p class="advantages__list__item__text text">
+                <p class="advantages__list__item__text">
                     Ежеквартальная публикация отчетов. И прохождение ежегодного аудита деятельности Фонда.
                 </p>
             </li>
