--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer hover-section" id="footer">
   <div class="footer__container _container">
     <div class="footer__header">
-      <div class="footer__title">
+      <div class="footer__title" data-aos="fade-up" data-aos-duration="1000">
         <h2 class="footer__title-text title-large">Основатели фонда</h2>
         <a href="https://mail.google.com/mail/u/0/?fs=1&to=envoysvision@gmail.com&tf=cm" target="_blank">
           @@include('./components/button.html', {
@@ -10,7 +10,7 @@
           })
         </a>
       </div>
-      <div class="footer__info">
+      <div class="footer__info" data-aos="fade-up" data-aos-duration="1500">
         <h3 class="footer__info-title">Лицензии выданные Государственной службой регулирования и надзора за финансовым рынком при Правительстве Кыргызской Республики:</h3>
         <ul class="footer__info-list">
           <li class="footer__info-item item-info">
@@ -28,7 +28,7 @@
         </ul>
       </div>
     </div>
-    <div class="footer__bottom">
+    <div class="footer__bottom" data-aos="fade-up" data-aos-duration="2000">
       <div class="footer__data">
         <div class="footer__column">
           <div class="footer__data-item item-data">
