--- a/src/html/home/advantages.html
+++ b/src/html/home/advantages.html
@@ -2,7 +2,7 @@
     <div class="_container">
 
         <div class="advantages__info">
-            <h1 class="title-large advantages__title">
+            <h1 class="title-large advantages__title" data-aos="fade-up" data-aos-duration="1000">
                 Основные <span class="title-large green">преимущества</span> фонда
             </h1>
 
