--- a/src/html/home/hero.html
+++ b/src/html/home/hero.html
@@ -1,16 +1,19 @@
 <section class="hero hover-section" id="hero">
     <div class="_container">
         <div class="hero__info">
-            <h1 class="hero__title">
+            <h1 class="hero__title" data-aos="fade-up" data-aos-duration="1000">
                 ФОНД ПЕРВИЧНЫХ 
                 <span class="hero__title green">РАЗМЕЩЕНИЙ</span>
             </h1>
-            <p class="hero__text">
+            <p class="hero__text" data-aos="fade-up" data-aos-duration="2000">
                 Фонд первичных размещений был создан в начале 2021 года командой специалистов инвестиционной компании «Royal Pure Gold».
             </p>
-            <a href="https://mail.google.com/mail/u/0/?fs=1&to=envoysvision@gmail.com&tf=cm" target="_blank">@@include('../components/button.html', {"text": 'Связаться с нами', "class": 'hero__btn'})</a>
+            <a href="https://mail.google.com/mail/u/0/?fs=1&to=envoysvision@gmail.com&tf=cm" target="_blank" data-aos="fade-up" data-aos-duration="2000">@@include('../components/button.html', {"text": 'Связаться с нами', "class": 'hero__btn'})</a>
         </div>
 
-        <img class="hero__img" src="img/hero/hero.jpg" alt="">
+        <img class="hero__img" src="img/hero/hero.jpg" alt="" data-aos="fade-zoom-in"
+     data-aos-easing="ease-in-back"
+     data-aos-delay="300"
+     data-aos-offset="0">
     </div>
 </section>
