--- a/src/html/home/investment.html
+++ b/src/html/home/investment.html
@@ -1,7 +1,7 @@
 <section class="investment hover-section" id="investment">
     <div class="_container">
         <div class="investment__wrap">
-            <div class="investment__info">
+            <div class="investment__info" data-aos="fade-up" data-aos-duration="1000">
                 <h2 class="investment__title title-large">
                     <span class="green">Условия</span> инвестирования
                 </h2>
@@ -16,7 +16,7 @@
                 @@include('../components/button.html', {"text": 'Узнать больше', "class": 'investment__btn exit-menu-btn', "dataset": "investCondition"})
             </div>
 
-            <div class="investment__image-wrap _ibg">
+            <div class="investment__image-wrap _ibg" data-aos="fade-up" data-aos-duration="1000">
                 <img src="img/investment/image.jpg" alt="" class="investment__img">
             </div>
         </div>
