--- a/src/html/home/target.html
+++ b/src/html/home/target.html
@@ -1,8 +1,8 @@
 <section class="page__target target hover-section" id="target">
   <div class="target__container _container">
     <div class="target__header">
-      <h2 class="target__title title-small">Целью <span class='title-small green'>инвестиционной политики Фонда</span> является обеспечение высоких и <span class='title-small green'>стабильных темпов роста</span> своих активов</h2>
-      <a href="https://mail.google.com/mail/u/0/?fs=1&to=envoysvision@gmail.com&tf=cm" target="_blank">
+      <h2 class="target__title title-small" data-aos="fade-up">Целью <span class='title-small green'>инвестиционной политики Фонда</span> является обеспечение высоких и <span class='title-small green'>стабильных темпов роста</span> своих активов</h2>
+      <a href="https://mail.google.com/mail/u/0/?fs=1&to=envoysvision@gmail.com&tf=cm" target="_blank" data-aos="fade-up">
         @@include('../components/button.html', {
           "text": "Связаться с нами",
           "class": "target__btn",
@@ -12,7 +12,7 @@
     </div>
     <div class="target__body">
       <div class="target__cards">
-        <article class="target__card card-target">
+        <article class="target__card card-target" data-aos="fade-up" data-aos-duration="1000">
           <h3 class="card-target__title">Инвестиционная стратегия</h3>
           <div class="card-target__text text">При формировании инвестиционного портфеля Blue chips Еврооблигации ETF сотрудники руководствуются внутренним
           инвестиционным регламентом, соблюдением диверсификации, Фонда с строгой как по отдельным инструментам так и по
@@ -23,14 +23,17 @@
             "dataset": "investStrategy"
           })
         </article>
-        <article class="target__card card-target">
+        <article class="target__card card-target" data-aos="fade-up" data-aos-duration="2000">
           <h3 class="card-target__title">Активы фонда могут быть инвестированы:</h3>
           <div class="card-target__text text">На инвестирование в IPO (первое публичное предложение акций) могут быть направлены средства, в объеме не более 30% от
           суммарной стоимости портфеля.
           Для фиксирования цен (в целях страхования позиций) по инструментам IPO в ходе торговли.</div>
         </article>
       </div>
-      <div class="target__image _ibg">
+      <div class="target__image _ibg" data-aos="fade-zoom-in"
+     data-aos-easing="ease-in-back"
+     data-aos-delay="300"
+     data-aos-offset="0">
         <img src="./img/target/actions.jpg" alt="monitoring_actions">
       </div>
     </div>
