--- a/src/html/home/introduction.html
+++ b/src/html/home/introduction.html
@@ -1,4 +1,4 @@
-<section class="page__introduction introduction hover-section" id="introduction">
+<section class="page__introduction introduction hover-section" id="introduction" data-aos="fade-up" data-aos-duration="1000">
   <div class="introduction__container _container">
     <div class="introduction__body">
       <div class="introduction__title">
