--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
     </div>
   </div>
 </div>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="js/app.min.js"></script>
 </body>
 </html>
