--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -28,7 +28,7 @@
         </ul>
       </div>
     </div>
-    <div class="footer__bottom" data-aos="fade-up" data-aos-duration="2000">
+    <div class="footer__bottom">
       <div class="footer__data">
         <div class="footer__column">
           <div class="footer__data-item item-data">
